--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Intégration maquette</title>
+        <meta name="description" content="Intégration de la maquette">
+        <link rel="stlyesheet" type="css" href="style.css">
+    </head>
+    <body>
+        <nav id="1"></nav>
+        <header></header>
+        <nav></nav>
+        <div class="slider">
+            <div class="mySlides fade">
+                <img src="" style="width:100%">
+                <h1>ÉVOLUER, PERFORMER, TRANSFORMER, PENSER EN ATHLÈTE</h1>
+            </div>
+            <div class="mySlides fade">
+                <img src="" style="width:100%">
+                <h1>IDENTIFIER LE BON TALENT</h1>
+            </div>
+            <div class="mySlides fade">
+                <img src="" style="width:100%">
+                <h1>ASSURER LA TRANSITION</h1>
+            </div>
+            <div class="mySlides fade">
+                <img src="" style="width:100%">
+                <h1>FACILITER LE LEADERSHIP DEVELOPMENT</h1>
+            </div>
+            <div class="mySlides fade">
+                <img src="" style="width:100%">
+                <h1>ACCÉLÉRER LA TRANSFORMATION DIGITALE & RSE</h1>
+            </div>
+            <div class="navslider">
+                <a class="next" onclick="currentSlide(1)">RECRUTEMENT</a>
+                <a class="next" onclick="currentSlide(2)">INTÉRIM</a>
+                <a class="next" onclick="currentSlide(3)">PERFORMANCE</a>
+                <a class="next" onclick="currentSlide(4)">TRANSFORMATION</a>
+            </div>
+        </div>
 
+        <h2>LA DIFFÉRENCE QUI FERA VOTRE DIFFÉRENCE</h2>
+        <div>
+            <p>Philosophie</p>
+            <img>
+        </div>
+        <div>
+            <p>Méthodologie</p>
+            <img>
+        </div>
+
+        <h2>POURQUOI FAIRE ÉQUIPE AVEC NOS CONSULTANTS ET COACHS ?</h2>
+        <h3>PROXIMITÉ - PARTAGE - ENGAGEMENT - DÉPASSEMENT DE SOI -ÉLÉGANCE</h3>
+        <div class="slider">
+            <div class="mySlides fade">
+                <h4>SERVICES FINANCIERS</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>DISTRIBUTION MÉDIAS</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>NON MARCHAND</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>INDUSTRIE</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>AUTOMOBILE TRANSPORT</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>SERVICE BTBOB</h4>
+                <p></p>
+            </div>
+            <div class="mySlides fade">
+                <h4>SANTÉ</h4>
+            </div>
+            <div class="mySlides fade">
+                <h4>IMMOBILIER</h4>
+                <p></p>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)"></a>
+            <a class="next" onclick="plusSlides(1)"></a>
+
+            <h3>MISSIONS LES PLUS COURANTES</h3>
+            <a class="prev" onclick="plusSlides(-1)"></a>
+            <a class="next" onclick="plusSlides(1)"></a>
+            <div class="slider">
+                <div class="mySlides fade">
+                    <img>
+                    <h4>RECRUTEMENT</h4>
+                </div>
+                <div class="mySlides fade">
+                    <img>
+                    <h4>INTERIM</h4>
+                </div>
+                <div class="mySlides fade">
+                    <img>
+                    <h4>PERFORMANCE</h4>
+                </div>
+                <div class="mySlides fade">
+                    <img>
+                    <h4>TRANSFORMATION</h4>
+                </div>
+            </div>
+
+            <h3>ILS NOUS FONT CONFIANCE</h3>
+            <p></p>
+            <div class="slider">
+                <div class="mySlides fade">
+                    <img>
+                    <h4>NOM CLIENT</h4>
+                    <p>Poste</p>
+                </div>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)"></a>
+            <a class="next" onclick="plusSlides(1)"></a>
+            <form>
+                    <select name="activity" id="activity-select">
+                        <option value="">Activité</option>
+                    </select>
+                    <select name="businessexpertise" id="businessexpertise-select">
+                        <option value="">Expertise métier</option>
+                    </select>
+                    <select name="sectoralexpertise" id="sectoralexpertise-select">
+                        <option value="">Expertise sectorielle</option>
+                    </select>
+                    <select name="location" id="location-select">
+                        <option value="">Localisation</option>
+                    </select>
+                    <input type="submit" value="LANCER LA RECHERCHE" />
+            </form>
+
+            <h3>BOOSTER VOS COMPÉTENCES</h3>
+            <div class="slider">
+                <a class="prev" onclick="plusSlides(-1)"></a>
+                <a class="next" onclick="plusSlides(1)"></a>
+                <div class="mySlides fade">
+                    <img>
+                    <p>Evènement</p>
+                </div>
+                <div class="mySlides fade">
+                    <img>
+                    <p>Atelier</p>
+                </div><div class="mySlides fade">
+                    <img>
+                    <p>Atelier</p>
+                </div><div class="mySlides fade">
+                    <img>
+                    <p>Séminaire</p>
+            </div>
+
+            <h2>UNE MISSION À NOUS CONFIER</h2>
+            <p></p>
+            <a>ON VOUS ÉCOUTE</a>
+
+            <h3>CONSULTER NOS PUBLICATIONS</h3>
+            <p>LIVRET BLANC</p>
+            <p></p>
+            <p>ÉTUDE EXCLUSIVE</p>
+            <p></p>
+            <p>ÉTUDE</p>
+            <p></p>
+
+            <h3>ACTUALITÉS</h3>
+    </body>
+</html>
